{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 579,
  "lineage": "4712e969-2220-2761-1123-bb2806bbd5d2",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:586794477720:loadbalancer/app/travel-stories-dev/4cc0b9356d54cc43",
            "arn_suffix": "app/travel-stories-dev/4cc0b9356d54cc43",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "travel-stories-dev-36296778.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:586794477720:loadbalancer/app/travel-stories-dev/4cc0b9356d54cc43",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "travel-stories-dev",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-04a71eaad9d59b546"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03eb1801470d5eb8c"
              },
              {
                "subnet_id": "subnet-0696f264472bd168e"
              }
            ],
            "subnets": [
              "subnet-03eb1801470d5eb8c",
              "subnet-0696f264472bd168e"
            ],
            "tags": {
              "Component": "compute",
              "Environment": "dev",
              "Owner": "your-name"
            },
            "tags_all": {
              "Component": "compute",
              "Environment": "dev",
              "Owner": "your-name"
            },
            "vpc_id": "vpc-05996bb81374116d2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:586794477720:loadbalancer/app/travel-stories-dev/4cc0b9356d54cc43"
          },
          "dependencies": [
            "module.ecs.aws_security_group.lb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:586794477720:listener/app/travel-stories-dev/4cc0b9356d54cc43/bbffb5fdb94c9ed9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:586794477720:targetgroup/travel-stories-dev/11ecdd16bbc94ec7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:586794477720:listener/app/travel-stories-dev/4cc0b9356d54cc43/bbffb5fdb94c9ed9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:586794477720:loadbalancer/app/travel-stories-dev/4cc0b9356d54cc43",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_target_group.app",
            "module.ecs.aws_security_group.lb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:586794477720:targetgroup/travel-stories-dev/11ecdd16bbc94ec7",
            "arn_suffix": "targetgroup/travel-stories-dev/11ecdd16bbc94ec7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:586794477720:targetgroup/travel-stories-dev/11ecdd16bbc94ec7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:586794477720:loadbalancer/app/travel-stories-dev/4cc0b9356d54cc43"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "travel-stories-dev",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Component": "compute",
              "Environment": "dev",
              "Owner": "your-name"
            },
            "tags_all": {
              "Component": "compute",
              "Environment": "dev",
              "Owner": "your-name"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05996bb81374116d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794477720:security-group/sg-067b4306c8d007314",
            "description": "Controls access to the ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067b4306c8d007314",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04a71eaad9d59b546"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "travel-stories-dev-tasks-sg",
            "name_prefix": "",
            "owner_id": "586794477720",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "compute",
              "Environment": "dev",
              "Name": "travel-stories-dev-tasks-sg",
              "Owner": "your-name"
            },
            "tags_all": {
              "Component": "compute",
              "Environment": "dev",
              "Name": "travel-stories-dev-tasks-sg",
              "Owner": "your-name"
            },
            "timeouts": null,
            "vpc_id": "vpc-05996bb81374116d2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.lb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794477720:security-group/sg-04a71eaad9d59b546",
            "description": "Controls access to the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a71eaad9d59b546",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "travel-stories-dev-lb-sg",
            "name_prefix": "",
            "owner_id": "586794477720",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "compute",
              "Environment": "dev",
              "Name": "travel-stories-dev-lb-sg",
              "Owner": "your-name"
            },
            "tags_all": {
              "Component": "compute",
              "Environment": "dev",
              "Name": "travel-stories-dev-lb-sg",
              "Owner": "your-name"
            },
            "timeouts": null,
            "vpc_id": "vpc-05996bb81374116d2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd2994d6de0c8b77",
            "arn": "arn:aws:ec2:us-east-1:586794477720:elastic-ip/eipalloc-0dd2994d6de0c8b77",
            "association_id": "eipassoc-0b310448372f47c79",
            "domain": "vpc",
            "id": "eipalloc-0dd2994d6de0c8b77",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0579f1161e7080805",
            "private_dns": "ip-10-0-1-124.ec2.internal",
            "private_ip": "10.0.1.124",
            "public_dns": "ec2-100-28-80-42.compute-1.amazonaws.com",
            "public_ip": "100.28.80.42",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-nat-eip",
              "Owner": "your-name"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-nat-eip",
              "Owner": "your-name"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794477720:internet-gateway/igw-09519241b24aa43c5",
            "id": "igw-09519241b24aa43c5",
            "owner_id": "586794477720",
            "region": "us-east-1",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-igw",
              "Owner": "your-name"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-igw",
              "Owner": "your-name"
            },
            "vpc_id": "vpc-05996bb81374116d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd2994d6de0c8b77",
            "association_id": "eipassoc-0b310448372f47c79",
            "connectivity_type": "public",
            "id": "nat-077857e5babd3e61c",
            "network_interface_id": "eni-0579f1161e7080805",
            "private_ip": "10.0.1.124",
            "public_ip": "100.28.80.42",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03eb1801470d5eb8c",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-nat",
              "Owner": "your-name"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-nat",
              "Owner": "your-name"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794477720:route-table/rtb-0fce06d1b0630dea3",
            "id": "rtb-0fce06d1b0630dea3",
            "owner_id": "586794477720",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-077857e5babd3e61c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-private-rt",
              "Owner": "your-name"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-private-rt",
              "Owner": "your-name"
            },
            "timeouts": null,
            "vpc_id": "vpc-05996bb81374116d2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794477720:route-table/rtb-002f3a82f71a472f2",
            "id": "rtb-002f3a82f71a472f2",
            "owner_id": "586794477720",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09519241b24aa43c5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-public-rt",
              "Owner": "your-name"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-public-rt",
              "Owner": "your-name"
            },
            "timeouts": null,
            "vpc_id": "vpc-05996bb81374116d2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0583c619d2d1a1988",
            "region": "us-east-1",
            "route_table_id": "rtb-0fce06d1b0630dea3",
            "subnet_id": "subnet-02db652ca46f452c6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038c943eebe7d58d4",
            "region": "us-east-1",
            "route_table_id": "rtb-0fce06d1b0630dea3",
            "subnet_id": "subnet-0abd1789c910feeff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095f3eac16ccae8bb",
            "region": "us-east-1",
            "route_table_id": "rtb-002f3a82f71a472f2",
            "subnet_id": "subnet-03eb1801470d5eb8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ae1c5e92142ef6f",
            "region": "us-east-1",
            "route_table_id": "rtb-002f3a82f71a472f2",
            "subnet_id": "subnet-0696f264472bd168e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794477720:subnet/subnet-02db652ca46f452c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02db652ca46f452c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "586794477720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-private-1",
              "Owner": "your-name"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-private-1",
              "Owner": "your-name"
            },
            "vpc_id": "vpc-05996bb81374116d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794477720:subnet/subnet-0abd1789c910feeff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abd1789c910feeff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "586794477720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-private-2",
              "Owner": "your-name"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-private-2",
              "Owner": "your-name"
            },
            "vpc_id": "vpc-05996bb81374116d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794477720:subnet/subnet-03eb1801470d5eb8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03eb1801470d5eb8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "586794477720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-public-1",
              "Owner": "your-name"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-public-1",
              "Owner": "your-name"
            },
            "vpc_id": "vpc-05996bb81374116d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794477720:subnet/subnet-0696f264472bd168e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0696f264472bd168e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "586794477720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-public-2",
              "Owner": "your-name"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-public-2",
              "Owner": "your-name"
            },
            "vpc_id": "vpc-05996bb81374116d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794477720:vpc/vpc-05996bb81374116d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-029dc90cd00ccddd6",
            "default_route_table_id": "rtb-0358e644dbe1df11e",
            "default_security_group_id": "sg-01f990e54a94f19e0",
            "dhcp_options_id": "dopt-02beb1004437b0f3f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05996bb81374116d2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0358e644dbe1df11e",
            "owner_id": "586794477720",
            "region": "us-east-1",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-vpc",
              "Owner": "your-name"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "travel-stories-vpc-vpc",
              "Owner": "your-name"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}